# gh_deprecation_finder

./: .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  config.ini  pyproject.toml
gh_deprecation_finder/: __init__.py  __main__.py  deprecations.py  main.py  repo.py  workflows.py
