[tool.poetry]
name = "gh-deprecation-finder"
version = "1.0.0"
description = ""
authors = ["Ktasper"]
readme = "README.md"
packages = [{include = "gh_deprecation_finder"}]

[tool.poetry.scripts]
github-deprecation-finder = "gh_deprecation_finder.main:app"

[tool.poetry.dependencies]
python = "^3.10"
typer = {extras = ["all"], version = "^0.7.0"}
github = "^1.2.7"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
pylint = "^2.17.2"
black = "^23.3.0"
pre-commit = "^3.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
